data/derived/comb/progs/unify/prog5952.ml.out
Characters 82-83:
  x:: l -> if n <= 0 then x else assoc (n-1) l;;
                                             ^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c * 'a list
